force-app/main/default/objects/Proyecto__c/fields/WIP_prodAvance__c.field-meta.xml
<CustomField>
    <fullName>WIP_prodAvance__c</fullName>
    <formula>Produccion_Avance__c -  Facturacion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WIP (Produccion Avance)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>