force-app/main/default/objects/Proyecto__c/fields/WIP_ProdAvance_EUR__c.field-meta.xml
<CustomField>
    <fullName>WIP_ProdAvance_EUR__c</fullName>
    <formula>IF(ISBLANK(WIP_prodAvance__c  ),0,ROUND((WIP_prodAvance__c  / Cambio_segun_moneda_local__c),2))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WIP (Produccion Avance EUR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>