force-app/main/default/objects/Proyecto__c/fields/WIP_ProdMedia__c.field-meta.xml
<CustomField>
    <fullName>WIP_ProdMedia__c</fullName>
    <formula>IF (Prod_media__c &gt; 0, IF (WIP__c / Prod_media__c &gt; 3, &apos;&gt; 3&apos;, &apos;&lt; 3&apos;), &apos;&lt; 3&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WIP/Producción Media</label>
    <type>Text</type>
</CustomField>