force-app/main/default/objects/Proyecto__c/fields/WIP_Razonable__c.field-meta.xml
<CustomField>
    <fullName>WIP_Razonable__c</fullName>
    <formula>PR_hace_3_meses__c- Facturacion__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WIP Razonable</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>