force-app/main/default/objects/Proyecto__c/fields/WIP_Razonable_IC__c.field-meta.xml
<CustomField>
    <fullName>WIP_Razonable_IC__c</fullName>
    <formula>IF (Calculo_WIP_Razonable_IC__c &gt;0.1 , &apos;&gt; 10%&apos;, &apos;&lt; 10%&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>WIP Razonable / IC</label>
    <type>Text</type>
</CustomField>