force-app/main/default/objects/Proyecto__c/recordTypes/Creacion.recordType-meta.xml
<RecordType>
    <fullName>Creacion</fullName>
    <active>true</active>
    <description>Creación</description>
    <label>Creación</label>
</RecordType>