force-app/main/default/objects/Proyecto__c/recordTypes/Definitivo.recordType-meta.xml
<RecordType>
    <fullName>Definitivo</fullName>
    <active>true</active>
    <description>Definitivo</description>
    <label>Definitivo</label>
</RecordType>