force-app/main/default/objects/Proyecto__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>Alerta_Cobros__c</columns>
    <columns>NAME</columns>
    <columns>Codigo__c</columns>
    <columns>Cuenta__c</columns>
    <columns>AvanceContractualEntregables__c</columns>
    <columns>Avance_Contractual_TDRs__c</columns>
    <columns>Entregables__c</columns>
    <columns>EntregablesFirmados__c</columns>
    <columns>TerminosReferencia__c</columns>
    <columns>Terminos_de_Referencia_Aprobados__c</columns>
    <columns>Comunicaciones__c</columns>
    <columns>Pais__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>OWNER.LAST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>